# what-have-we-got

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.claude/: settings.json
.github/workflows/: ci.yml
.hermes/plans/: 2026-04-22_160031-whgot-web-ui-reliability-roadmap.md
docs/: eval-workflow.md  overnight-milestones.md  roadmap.md  web-ui-flow.md
eval/: README.md  benchmark_schema.md
eval/benchmarks/: starter_manifest.json
eval/benchmarks/books-media/: README.md
eval/benchmarks/electronics/: README.md
eval/benchmarks/toys-collectibles/: README.md
src/whgot/: __init__.py  cli.py  condition.py  eval.py  listing.py  parsing.py  pricing.py  schema.py  session_store.py  triage.py  vision.py  web_app.py
src/whgot/web_static/: styles.css
src/whgot/web_templates/: base.html  index.html  results.html  sessions.html
tests/: test_cli.py  test_condition.py  test_eval.py  test_exports.py  test_listing.py  test_parsing.py  test_pipeline_offline.py  test_pricing.py  test_schema.py  test_triage.py  test_vision.py  test_web_app.py
tests/fixtures/items/: books_media_sample.json  electronics_sample.json  toys_collectibles_sample.json
tests/fixtures/vision/: batch-shelf-response.json.txt  malformed-response-markdown-fence.txt  single-book-response.json.txt
