[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "whgot"
version = "0.1.0"
description = "Identify items from photos or text lists and retrieve structured resale data"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Alexander Pico", email = "arpico@gmail.com" },
]
dependencies = [
    "typer>=0.12",
    "rich>=13.0",
    "ollama>=0.4",
    "pillow>=10.0",
    "pydantic>=2.0",
    "httpx>=0.27",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.5",
]

[project.scripts]
whgot = "whgot.cli:app"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
